[package]
name = "rusty-offerings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
tokio = { version = "1", features = ["full"] }
didkit = "0.6.0"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
ssi-vc = "0.2.0"
