[package]
name = "rusty-offerings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
reqwest = "0.11.22"
tokio = { version = "1", features = ["full"] }
didkit = "0.6.0"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
serde_jcs = "0.1.0"
ssi-vc = "0.2.0"
ssi-jwk = "0.1.2"
ssi-jws = "0.1.1"
ciborium = "0.2.1"
sha2 = "0.10.8"
base64 = "0.21.3"
type-safe-id = "0.2.1"
